# BioMask

./: .env  .gitignore  README.md  docker-compose.yaml  hlf.sh
client/: .gitignore  network-config-old.json  network-config.json  pyproject.toml  test.py
client/biomask/: client.py  crypto.py  datacls.py
client/lib/fuzzy_extractor/: extractor.py
client/lib/passphrase/: encryption.py
client/lib/signature/: base.py  rsa.py
client/scripts/: generate_keys.py
client/test/fixtures/e2e_cli/crypto-config/ordererOrganizations/example.com/tlsca/: tlsca.example.com-cert.pem
client/test/fixtures/e2e_cli/crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp/tlscacerts/: tlsca.org1.example.com-cert.pem
contracts/device-registration/: device_registration.go  go.mod
